--- a/static/style/confirmation.css
+++ b/static/style/confirmation.css
@@ -3,12 +3,14 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0;
+    padding: 20px;
 }
 
 .container {
     display: flex;
     flex-direction: column; /* Stack elements vertically */
     align-items: center; /* Center items horizontally */
+    padding: 20px;
 }
 
 .info {
@@ -16,7 +18,7 @@ body {
     border-radius: 4px; 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    width: 400px;
+    width: 300px;
 }
 form {
     max-width: 400px;
